NetBSD Problem Report #45907

From he@mt.urc.uninett.no  Wed Feb  1 13:32:55 2012
Return-Path: <he@mt.urc.uninett.no>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 1ABA763C41D
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  1 Feb 2012 13:32:55 +0000 (UTC)
Message-Id: <20120201133251.C96D975CFF@mt.urc.uninett.no>
Date: Wed,  1 Feb 2012 14:32:51 +0100 (CET)
From: he@netbsd.org
Reply-To: he@netbsd.org
To: gnats-bugs@gnats.NetBSD.org
Subject: new fil.c fails to build without "options INET6"
X-Send-Pr-Version: 3.95

>Number:         45907
>Category:       kern
>Synopsis:       new fil.c fails to build without "options INET6"
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Feb 01 13:35:00 +0000 2012
>Closed-Date:    Wed Feb 01 17:12:40 +0000 2012
>Last-Modified:  Wed Feb 01 17:15:03 +0000 2012
>Originator:     Havard Eidnes
>Release:        NetBSD-current as of January 31 2012
>Organization:
	None
>Environment:
System: build host: NetBSD mt.urc.uninett.no 5.0_STABLE NetBSD 5.0_STABLE (MT) #1: Mon Nov 16 16:24:52 CET 2009 he@mt.urc.uninett.no:/usr/obj/sys/arch/amd64/compile/MT amd64
Architecture: x86_64
Machine: amd64
>Description:
	The new ipfilter's fil.c fails to build with kernel configs
	which don't contain "options INET6".

	An example is the evbmips ALCHEMY configuration, where the build
	aborts with:

    compile  ALCHEMY/fil.o
/u/build/HEAD/src/sys/dist/ipf/netinet/fil.c: In function 'ipf_ht_node_make_key':
/u/build/HEAD/src/sys/dist/ipf/netinet/fil.c:9658:54: error: 'i6addr_t' has no member named 'in6'

	Code inspection shows that ip_fil.h defined the i6addr_t union
	differently depending on whether USE_INET6 is defined or not, where the
	non-USE_INET6 branch doesn't declare the in6 member, which causes
	the above build failure.

	According to ip_compat.h, USE_INET6 is only defined in the kernel if
	INET6 is defined.

>How-To-Repeat:
	Try to build a kernel with IPF but without INET6, watch it fail.
>Fix:
	I suspect some more ifdef'ing on USE_INET6 is required.

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: darrenr@NetBSD.org
State-Changed-When: Wed, 01 Feb 2012 17:12:40 +0000
State-Changed-Why:
problem fixed


From: "Darren Reed" <darrenr@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45907 CVS commit: src/sys/dist/ipf/netinet
Date: Wed, 1 Feb 2012 17:11:46 +0000

 Module Name:	src
 Committed By:	darrenr
 Date:		Wed Feb  1 17:11:46 UTC 2012

 Modified Files:
 	src/sys/dist/ipf/netinet: fil.c

 Log Message:
 PR kern/45907
 #ifdef USE_INET6 guards are missing around IPv6 code


 To generate a diff of this commit:
 cvs rdiff -u -r1.51 -r1.52 src/sys/dist/ipf/netinet/fil.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.