PR kern/45907 #ifdef USE_INET6 guards are missing around IPv6 code